--- a/_posts/2023-06-27-UIUX.md
+++ b/_posts/2023-06-27-UIUX.md
@@ -2,7 +2,7 @@
 layout: post
 title: "UI/UX Design"
 categories: session
-tags: presentation
+tags: [Presentation, Reference]
 banner:
   image: "/assets/imgs/HackHPCatADMI23-ai-logo.jpeg"
   height: "25vh"
