added code warriors

--- a/_posts/2023-06-27-UIUX.md
+++ b/_posts/2023-06-27-UIUX.md
@@ -24,12 +24,14 @@ Ali Baigelenov is currently a PhD graduate student at [Purdue University](https:
   &nbsp;Where are they doing their tasks?<br>
   &nbsp;Why are they doing their tasks?<br>
 </p>
+
 # Suggested Resources: 
 
 * **Quick and easy UI tips** - [https://twitter.com/i/events/968521944004943872](https://twitter.com/i/events/968521944004943872)
 * **More UI tips** - [https://twitter.com/i/events/880688233641848832](https://twitter.com/i/events/880688233641848832)
 * **Usability** - [https://www.nngroup.com/articles/ten-usability-heuristics/](https://www.nngroup.com/articles/ten-usability-heuristics/)
 * **UX** -  [https://www.learnui.design/blog/4-rules-intuitive-ux.html](https://www.learnui.design/blog/4-rules-intuitive-ux.html)
+* **4 Rules for Intuitive UX** - [https://www.learnui.design/blog/4-rules-intuitive-ux.html]
   
 <img style="border: 2px solid darkblue;"  src="{{ "assets/images/ali/uiux-principles.png" | relative_url }}">
 
